logs/pirates-150919_091810.log
1 explicit pages:
  config/english/config_en.prc

2 implicit pages:
  /c/Panda3D-1.8.1/etc/Config.prc
  /c/Panda3D-1.8.1/etc/Confauto.prc

serverVersion:  sv-1.0.0
PAccount: accountServer from launcher:  
PAccount: default accountServer:  https://pirates.go.com
Initializing quest ladders...
Traceback (most recent call last):
  File "C:\Panda3D-1.8.1\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.8.1\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\Tyler\Desktop\POTCOR-src\pirates\piratesbase\PiratesStart.py", line 61, in <module>
    from pirates.distributed import PiratesClientRepository
  File "pirates\distributed\PiratesClientRepository.py", line 58, in <module>
    from pirates.makeapirate.MakeAPirate import MakeAPirate
  File "pirates\makeapirate\MakeAPirate.py", line 21, in <module>
    from pirates.pirate import LocalPirate
  File "pirates\pirate\LocalPirate.py", line 30, in <module>
    from pirates.piratesgui import GuiManager
  File "pirates\piratesgui\GuiManager.py", line 23, in <module>
    from pirates.piratesgui import ChestTray
  File "pirates\piratesgui\ChestTray.py", line 22
    def __init__(self, parent, parentMgr, pos = None, sortOrder = 0)):
                                                                    ^
SyntaxError: invalid syntax
